# gsd-lab-agent

./: README.md  instructions.txt  pyproject.toml  v1-plan-summary.md
examples/samples/: example_samples.csv
input/example-assay-documents/SeCoreHLA_Assay/: PCP0005347_4477680_Rev02.00_Molokai_Dx_Internal_reporducibility_test_plan.docx
outputs/example-run/: assay_spec.json  protocol.csv  protocol.json  protocol.txt
src/lab_protocol_agent/: __init__.py  cli.py  csv_input.py  extractors.py  models.py  pdf_ingestion.py  protocol_generator.py  renderers.py
tests/: test_protocol_pipeline.py
