[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-protocol-agent"
version = "0.1.0"
description = "POC pipeline for generating technician-ready lab protocols from assay PDFs and sample CSV inputs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
  "pypdf>=5.0,<6",
]

[project.optional-dependencies]
openai = [
  "openai>=1.40.0,<2",
]

[project.scripts]
lab-protocol-agent = "lab_protocol_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
